--- a/.github/workflows/c-cpp-test.yml
+++ b/.github/workflows/c-cpp-test.yml
@@ -45,17 +45,27 @@ jobs:
 #        ls build
 #        ./hello
 
-#  build-cpp-windows-2019:
-#    name: C++/MSVS (windows-2019)
+  build-cpp-windows-2019:
+    name: C++/MSVS (windows-2019)
 
-#    runs-on: windows-2019
+    runs-on: windows-2019
 
-#    env:
-#      wxMSW_VER: 3.1.3
-#      WXWIN: c:\wxWidgets-3.1.3
+    env:
+      wxMSW_VER: 3.1.4
+      WXWIN: wxWidgets-
+#      WXWIN: c:\wxWidgets-
 
-#    steps:
-#      - uses: actions/checkout@v2
+    steps:
+      - name: checkout wxWin
+        uses: actions/checkout@v2
+        with:
+          repository: wxWidgets/wxWidgets
+          ref: v${{ env.wxMSW_VER }}
+          path: ${{ env.WXWIN }}${{ env.wxMSW_VER }}
+      - name: start building wx widgtes
+        run: |
+          cd ${{ env.WXWIN }}${{ env.wxMSW_VER }}
+          nmake /f makefile.vc BUILD=release TARGET_CPU=X86
 
 #      - name: Install wxWidgets
 #        run: |
