--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -1,5 +1,4 @@
-
-name: C/C++ CI
+name: Version Bump
 
 on:
   push:
@@ -22,5 +21,5 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
         DEFAULT_BUMP: none
-        INITIAL_VERSION: 2.0.3
+#        INITIAL_VERSION: 2.0.3
       id: bump_version
