sending new version event #patch

--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -23,4 +23,11 @@ jobs:
         DEFAULT_BUMP: none
         RELEASE_BRANCHES: main,master  
         INITIAL_VERSION: 2.0.3
+        VERBOSE: true
       id: bump_version
+    - name: Repository dispatch tag created event
+      uses: peter-evans/repository-dispatch@v1
+      with:
+        token: ${{ secrets.REPO_ACCESS_TOKEN }}
+        event-type: tag-created
+        client-payload: '{"new_version": "${{ steps.bump_version.outputs.new_tag }}"}'
