--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -31,3 +31,5 @@ jobs:
         token: ${{ secrets.REPO_ACCESS_TOKEN }}
         event-type: tag-created
         client-payload: '{"new_version": "${{ steps.bump_version.outputs.new_tag }}"}'
+
+# wichtig: https://docs.github.com/en/free-pro-team@latest/github/authenticating-to-github/creating-a-personal-access-token
