--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -25,6 +25,10 @@ jobs:
         INITIAL_VERSION: 2.0.3
         VERBOSE: true
       id: bump_version
+    - name: Hello World
+      uses: actions/hello-world-javascript-action@main
+      with:
+        who-to-greet: steps.bump_version.outputs.new_tag
 #    - name: Repository dispatch tag created event
 #      uses: peter-evans/repository-dispatch@v1
 #      with:
