--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Hello World
       uses: actions/hello-world-javascript-action@main
       with:
-        who-to-greet: steps.bump_version.outputs.new_tag
+        who-to-greet: ${{ steps.bump_version.outputs.new_tag }}
 #    - name: Repository dispatch tag created event
 #      uses: peter-evans/repository-dispatch@v1
 #      with:
